# AIML_PAA_Capstone

./: Complete_EDA_Analysis.ipynb  LICENSE  MANIFEST.in  README.md  Report_EDA.md  complete_eda_analysis.py  customer_clustering_implementation.py  generate_academic_report.py  pyproject.toml  requirements.txt
data/: segmentation_data_33k.csv
output/: cluster_profiles.csv  customer_segments.csv
